# codecho

./: .env  .env.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-linux.sh  build.sh
src/: codex.rs  main.rs  server.rs  types.rs
